--- a/data.yaml
+++ b/data.yaml
@@ -1,8 +1,8 @@
 # dataset path
 
-train: D:/YOLOV8/ultralytics-main/dataset/images/train
-val: D:/YOLOV8/ultralytics-main/dataset/images/val
-test: D:/YOLOV8/ultralytics-main/dataset/images/test
+train: dataset/images/train
+val: dataset/images/val
+test: dataset/images/test
 
 # number of classes
 nc: 1
